--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "@vis.gl/react-google-maps": "^1.0.2",
     "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
