--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.12.1",
     "geolib": "^3.3.4",
+    "html2pdf.js": "^0.10.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
