fix: google maps not working in prod and  replaced lorem in settings

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,9 @@
 {
   "projects": {
-    "default": "irs-capstone"
-  }
+    "default": "irs-capstone",
+    "adminirstambubong": "irs-capstone"
+  },
+  "targets": {},
+  "etags": {},
+  "dataconnectEmulatorConfig": {}
 }
